updates to template added build scripts tested and added working example

--- a/Maqrizi.ItticazHunafa-fitna/index.html
+++ b/Maqrizi.ItticazHunafa-fitna/index.html
@@ -501,7 +501,7 @@
                     <a href="https://kitab-project.org/">
                         <img src="assets/logo/KITAB Logo.jpg" alt="kitab-project" class="logo-image">
                     </a>
-                    <h5 class="offcanvas-title" id="offcanvasLabel">@page_title@</h5>
+                    <h5 class="offcanvas-title" id="offcanvasLabel">0845Maqrizi.ItticazHunafa-fitna-ms<br>Clusters-Version-2021.2.5</h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
