fixes to linking

--- a/Maqrizi.ItticazHunafa-fitna/index.html
+++ b/Maqrizi.ItticazHunafa-fitna/index.html
@@ -29,7 +29,7 @@
         <!-- Script for taking whats in the dropdown and reading files to populate the right box-->
         <script type="module">
             //Fetch data from the index
-            import data from "/index.json" assert { type: 'json' };            
+            import data from "./index.json" assert { type: 'json' };            
 
     
             //Create the sidebar html
