updated history of yemen to include larger clusters

--- a/0310Tabari.Tarikh.history-of-yemen/index.html
+++ b/0310Tabari.Tarikh.history-of-yemen/index.html
@@ -241,7 +241,7 @@
                     <a href="https://kitab-project.org/">
                         <img src="assets/logo/KITAB Logo.jpg" alt="kitab-project" class="logo-image">
                     </a>
-                    <h5 class="offcanvas-title" id="offcanvasLabel">0310Tabari.Tarikh.history-of-yemen<br>Clusters-Version-2022.2.7</h5>
+                    <h5 class="offcanvas-title" id="offcanvasLabel">0310Tabari.Tarikh.history-of-yemen-2<br>Clusters-Version-2022.2.7</h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
